# TeletextSignals

./: 0_teletext_key_figures.ipynb  A_retrieval_examples.ipynb  B_2step_rag_example.ipynb  B_2step_rag_example_qwen.ipynb  B_rag_example.ipynb  C_agentic_rag_example.ipynb  D_mpnet_similarity_example.ipynb  Dockerfile  E_SMI_events.ipynb  README.md  docker-compose.yml  pyproject.toml
initdb/: 01-teletext.sql
modules/: bertopic_mpnet_topics.py  document_retriever.py  langchain_2step_rag.py  langchain_agentic_rag.py  langchain_rag.py  langchain_teletext_retriever.py  mpnet_similarity.py  notebook_helpers.py  query_utils.py
readme_files/: helpers.md
scripts/: 1_fetch_teletext.py  2a_embed_articles_E5.py  2a_embed_articles_RAG.py  2b_embed_articles_mpnet.py  3_bertopic_topics.py  3a_test_query.py  3b_test_query_rerank.py  4_download_smi_yahoo.py
scripts/tests/: 1a_test_query.py  1b_test_query_rerank.py  2_test_2step_rag.py  2_test_rag.py  3_test_agentic_rag.py  4_test_mpnet.py  5_test_topic_deviation.py
