[project]
name = "teletextsignals"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "bertopic>=0.17.4",
    "hdbscan>=0.8.41",
    "ipykernel>=7.1.0",
    "langchain>=1.0.8",
    "langchain-huggingface>=1.0.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.0.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pandas-stubs~=2.3.3",
    "psycopg2-binary>=2.9.11",
    "psycopg[binary]",
    "requests",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.45",
    "squarify>=0.4.4",
    "umap-learn>=0.5.11",
    "yfinance>=0.2.55",
]
